Use the new pattern api of MetaFactory 2.1

--- a/snippet/velocity_implicit.vm
+++ b/snippet/velocity_implicit.vm
@@ -8,13 +8,11 @@
 #* @vtlvariable name="metafactory" type="com.metafactory.api.IMetaFactoryTemplateEngineProxy" *#
 #* @vtlvariable name="generator" type="com.metafactory.api.IMetaFactoryTemplateEngineProxy" *#
 #* @vtlvariable name="context" type="com.metafactory.api.IContextProxy" *#
-#* @vtlvariable name="nsModel" type="org.jdom2.Namespace" *#
-#* @vtlvariable name="nsPattern" type="org.jdom2.Namespace" *#
-#* @vtlvariable name="packagePattern" type="org.jdom2.Element" *#
-#* @vtlvariable name="classPattern" type="org.jdom2.Element" *#
-#* @vtlvariable name="interfacePattern" type="org.jdom2.Element" *#
-#* @vtlvariable name="attributePattern" type="org.jdom2.Element" *#
-#* @vtlvariable name="operationPattern" type="org.jdom2.Element" *#
+#* @vtlvariable name="packagePattern" type="com.metafactory.api.ci.java.JavaCiForPackage" *#
+#* @vtlvariable name="classPattern" type="com.metafactory.api.ci.java.JavaCiForClass" *#
+#* @vtlvariable name="interfacePattern" type="com.metafactory.api.ci.java.JavaCiForInterface" *#
+#* @vtlvariable name="attributePattern" type="com.metafactory.api.ci.java.JavaCiForAttribute" *#
+#* @vtlvariable name="operationPattern" type="com.metafactory.api.ci.java.JavaCiForOperation" *#
 #* @vtlvariable name="comparatorFactory" type="com.metafactory.api.IComparatorFactory" *#
 #* @vtlvariable name="genpack" type="java.lang.String" *#
 #* @vtlvariable name="genpackpath" type="java.lang.String" *#
@@ -24,12 +22,12 @@
 #* @vtlvariable name="foreachReference" type="java.lang.Boolean" *#
 #* @vtlvariable name="foreachOperation" type="java.lang.Boolean" *#
 #* @vtlvariable name="forEachPropertyValue" type="java.lang.String" *#
-#* @vtlvariable name="generatedPackage" type="org.sxmi.wrapper.api.IXMIPackage" *#
-#* @vtlvariable name="generatedInterface" type="org.sxmi.wrapper.api.IXMIInterface" *#
-#* @vtlvariable name="generatedClass" type="org.sxmi.wrapper.api.IXMIClass" *#
-#* @vtlvariable name="generatedAttribute" type="org.sxmi.wrapper.api.IXMIAttribute" *#
-#* @vtlvariable name="generatedOperation" type="org.sxmi.wrapper.api.IXMIOperation" *#
-#* @vtlvariable name="sxmiFactory" type="org.sxmi.wrapper.api.IXMIFactory" *#
+#* @vtlvariable name="generatedPackage" type="com.metafactory.api.pattern.JavaAstPackage" *#
+#* @vtlvariable name="generatedInterface" type="com.metafactory.api.pattern.JavaAstInterface" *#
+#* @vtlvariable name="generatedClass" type="com.metafactory.api.pattern.JavaAstClass" *#
+#* @vtlvariable name="generatedAttribute" type="com.metafactory.api.pattern.JavaAstAttribute" *#
+#* @vtlvariable name="generatedOperation" type="com.metafactory.api.pattern.JavaAstOperation" *#
+#* @vtlvariable name="javaFactory" type="com.metafactory.api.pattern.JavaFactory" *#
 #* @vtlvariable name="modelProperties" type="java.util.Properties" *#
 #* @vtlvariable name="modelAttributeProperties" type="java.util.Properties" *#
 #* @vtlvariable name="modelOperationProperties" type="java.util.Properties" *#
@@ -42,7 +40,7 @@
 #* @vtlvariable name="double" type="java.lang.Double" *#
 #* @vtlvariable name="bigdecimal" type="java.math.BigDecimal" *#
 #* @vtlvariable name="biginteger" type="java.math.BigInteger" *#
-#* @vtlvariable name="stringUtils" type="org.apache.commons.lang.StringUtils" *#
+#* @vtlvariable name="stringUtils" type="org.apache.commons.lang3.StringUtils" *#
 #* @vtlvariable name="dollar" type="java.lang.String" *#
 #* @vtlvariable name="hash" type="java.lang.String" *#
 
